testdata/invalidwiki/Страница 1/Страница 2/Страница 5/__page.opt
[General]
type = text
datetime = 2017-02-28 13:53:27.975897

[Section1]
param1 = абырвалг_777
param2 = 888

